Fix resizable handler and scrollbar

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -8,3 +8,16 @@
     background: white;
     min-height: 100%;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    overflow: auto;
+    height: 100%;
+}
